fix scrollbars and selectety draggy box thing

--- a/source/stylesheets/modules/_vars.scss
+++ b/source/stylesheets/modules/_vars.scss
@@ -27,8 +27,10 @@ $z-drag-helper: 30;
 $z-context-menu: 20;
 $z-sidebar: 20;
 
-$z-panel-controls: 16;
-$z-panel-avatar: 16;
+$z-panel-controls: 17;
+$z-panel-avatar: 17;
+
+$z-main: 16;
 
 $z-title: 15;
 
