--- a/source/stylesheets/partials/_main.scss
+++ b/source/stylesheets/partials/_main.scss
@@ -19,19 +19,20 @@ $duration: 150ms;
   @include pos(0, 0, 0, $sidebar-width + $sidebar-padding * 2);
   padding: 0 0 $sidebar-padding * 2;
   overflow-y: auto;
+  z-index: $z-main;
 
   .title {
     position: fixed;
     z-index: $z-title;
-    margin: 0 $sidebar-padding;
+    padding: 0 $sidebar-padding $sidebar-padding + 45px;
     right: 0;
     left: $sidebar-width + $sidebar-padding*2;
     background: $light-grey;
 
     @if $web == true {
-      height: $panelHeight + 70px + $sidebar-padding;
+      height: $panelHeight + 25px;
     } @else {
-      height: $panelHeight + 95px;
+      height: $panelHeight + 50px;
     }
 
     .list-name {
